@@ -1,6 +1,6 @@
 /* knj.h: check for 2-Byte Kanji (CP 932, SJIS) codes.
 
-   Copyright 2010, 2011 Akira Kakuto.
+   Copyright 2010, 2014 Akira Kakuto.
    Copyright 2013, 2014 TANAKA Takuji.
 
    This library is free software; you can redistribute it and/or
@@ -34,6 +34,8 @@ extern KPSEDLL char* get_mbstring_from_wstring(int cp, const wchar_t *wstr, char
 extern KPSEDLL FILE* fsyscp_xfopen(const char *filename, const char *mode);
 extern KPSEDLL FILE* fsyscp_fopen(const char *filename, const char *mode);
 extern KPSEDLL FILE* fsyscp_popen(const char *command, const char *mode);
+extern KPSEDLL int fsyscp_spawnvp(int mode, const char *command, const char* const *argv);
+extern KPSEDLL int fsyscp_system(const char *cmd);
 extern KPSEDLL void get_command_line_args_utf8(const char *enc, int *p_ac, char ***p_av);
 
 #ifdef __cplusplus
