@@ -1,3 +1,8 @@
+2014-01-14  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* knj.[ch]: Add new functions fsyscp_spawnvp(), and fsyscp_system().
+	(Windows only)
+
 2014-01-13  TANAKA Takuji  <KXD02663@nifty.ne.jp>
 
 	* knj.[ch]: Add a new function fsyscp_popen(). (Windows only)
